frontend/src/datapage/datapage.css
.data-page-content {
    margin-top: 20px;
}

.data-page-filters-wrap {
    display: flex;
    justify-content: space-between;
}

.data-page-filters {
    display: flex;
    flex-direction: row;
}

.data-page-filters>:not(:first-child) {
    margin-left: 15px;
}

.data-page-search {
    height: 13px;
}

.data-page-loading {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 30px;
    width: 100%;
    height: 80vw;
}

.data-page-footer {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    font-size: 19px;
}

.data-page-pagination-buttons>* {
    width: 55px;
    height: 35px;
    font-size: 20px;
}

.data-page-pagination-buttons>:not(:first-child) {
    margin-left: 9px;
}

